--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ iframe {width: 100%;
         height: 600px;
 }
 
-h1 {text-align:center;
+h1.love {text-align:center;
     font-weight:bold;
     color:#CA3A35;
     font-size:100px;
