--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ ul {
 
 li {
   float: left;
-  border-right:3x solid #FACCCE;
+  border-right:3px solid #FACCCE;
 }
 
 li a {
@@ -43,7 +43,7 @@ iframe {width: 100%;
 h1.love {text-align:center;
     font-weight:bold;
     color:#CA3A35;
-    font-size:100px;
+    font-size:50px;
     font-family: "Lucida Handwriting";
     text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 25px #e60073, 0 0 30px #e60073, 0 0 350px #e60073;
 }
